# genai_assignment3

./: .gitignore  Dockerfile  README.md  gan_discriminator.pth  gan_generator.pth  pyproject.toml  train.py
app/: main.py
helper_lib/: data_loader.py  image_generator.py  model.py  trainer.py
