# pyproject.toml

[project]
name = "assignment-3-gan"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "numpy>=1.20.0",
    "python-multipart>=0.0.5",  # For FastAPI
    "Pillow>=9.0.0",            # For image processing
    "matplotlib>=3.0.0"       # For saving image grids
]